--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
+  "homepage": "https://github.com/Sensuele/react-portfolio",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
@@ -17,6 +18,8 @@
     "react-particles-js": "^3.4.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-tsparticles": "^1.33.2",
+    "tsparticles": "^1.33.2",
     "typewriter-effect": "^2.17.0",
     "web-vitals": "^0.2.4"
   },
